--- a/css/login.css
+++ b/css/login.css
@@ -81,15 +81,20 @@ body {
 
 .register-btn {
     position: absolute;
-    width: 70%;
-    height: 35px;
+    padding: 0;
+    background: 0;
+    border: none;
     border-radius: 5px;
     text-align: center;
     line-height: 35px;
     color: black;
+    font-size: 15px;
     font-weight: bold;
     background-color: rgba(255, 0, 0, 0.336);
     bottom: 21%; left: 15%;
+    cursor: pointer;
+    width: 70%;
+    height: 35px;
 }
 
 .goBoard a {
