--- a/css/nav.css
+++ b/css/nav.css
@@ -33,13 +33,23 @@ nav {
 .accountBox {
     position: absolute;
     width: 300px;
-    right: 0; bottom: 25%;
+    height: 40px;
+    right: 4%; bottom: 25%;
 }
 
-.accountBox > div a {
+.accountBox > div > span {
+    position: absolute;
+    height: 100%;
+    float: left;
+    margin-right: 20px;
+    line-height: 40px;
+}
+
+.accountBox > div > a {
     width: 35%;
     height: 40px;
     float: left;
+    margin-left: 100px;
     text-align: center;
     font-weight: bold;
     line-height: 40px;
@@ -49,6 +59,10 @@ nav {
 
 .goLogin {
     background-color: #1ab2ffa6;
+}
+
+.goLogout {
+    background-color: rgba(255, 0, 0, 0.336);
 }
 
 .goRegister {
