--- a/css/writeBoard.css
+++ b/css/writeBoard.css
@@ -1,6 +1,6 @@
 #wrapper {
     width: 900px;
-    height: 800px;
+    height: 830px;
     margin-top: 40px;
 }
 
@@ -10,11 +10,23 @@
     position: relative;
 }
 
+#select {
+    position: absolute;
+    top: 5px;
+}
+
+#select > .opt {
+    width: 150px;
+    height: 30px;
+    border-radius: 3px;
+    border: 1px solid black;
+}
+
 .title {
     position: absolute;
     width: 100%;
     height: 40px;
-    top: 0;
+    top: 55px;
     font-size: 20px;
     font-weight: bold;
     border: 0;
@@ -25,12 +37,12 @@
 #content {
     position: absolute;
     width: 100%;
-    height: 640px;
-    bottom: 100px;
+    height: 540px;
+    bottom: 180px;
     resize: none;
     border-radius: 2px;
     padding: 5px;
-    font-size: 19px;
+    font-size: 14px;
     font-weight: 700;
 }
 
@@ -40,7 +52,7 @@
     height: 35px;
     text-align: center;
     line-height: 35px;
-    bottom: 30px;;
+    bottom: 130px;
     right: 0;
     border: 0;
     border-radius: 2px;
@@ -55,6 +67,6 @@
 .textCheck {
     position: absolute;
     left: 0;
-    bottom: 30px;
+    bottom: 130px;
     font-weight: bold;
 }
